hot fix to adjust spacing

--- a/drake-albums/v2/css/main.css
+++ b/drake-albums/v2/css/main.css
@@ -332,6 +332,9 @@ template {
 /*--------------------------------------------------------------------
  * Settings - Variables for project
  *------------------------------------------------------------------*/
+.padding-small {
+  padding: 16px; }
+
 .center {
   margin-left: auto;
   margin-right: auto;
@@ -546,27 +549,27 @@ svg.leaf {
 
 @keyframes tml-glitch {
   0% {
-    clip: rect(446px, 300px, 476px, 0); }
+    clip: rect(129px, 300px, 341px, 0); }
   10% {
-    clip: rect(167px, 300px, 175px, 0); }
+    clip: rect(278px, 300px, 6px, 0); }
   20% {
-    clip: rect(396px, 300px, 192px, 0); }
+    clip: rect(273px, 300px, 32px, 0); }
   30% {
-    clip: rect(432px, 300px, 62px, 0); }
+    clip: rect(475px, 300px, 348px, 0); }
   40% {
-    clip: rect(475px, 300px, 315px, 0); }
+    clip: rect(473px, 300px, 468px, 0); }
   50% {
-    clip: rect(526px, 300px, 456px, 0); }
+    clip: rect(350px, 300px, 13px, 0); }
   60% {
-    clip: rect(242px, 300px, 124px, 0); }
+    clip: rect(443px, 300px, 156px, 0); }
   70% {
-    clip: rect(546px, 300px, 596px, 0); }
+    clip: rect(105px, 300px, 21px, 0); }
   80% {
-    clip: rect(248px, 300px, 472px, 0); }
+    clip: rect(75px, 300px, 283px, 0); }
   90% {
-    clip: rect(253px, 300px, 199px, 0); }
+    clip: rect(334px, 300px, 364px, 0); }
   100% {
-    clip: rect(46px, 300px, 567px, 0); } }
+    clip: rect(316px, 300px, 573px, 0); } }
 
 @keyframes tml-shake {
   0% {
@@ -700,11 +703,10 @@ svg.leaf {
 .if-text {
   font-family: 'Late-Regular';
   font-size: 48px;
-  padding-left: 32px;
+  padding-left: 24px;
   white-space: nowrap;
   overflow: hidden;
   height: 48px;
-  text-align: left;
   width: 30em;
   margin: 0;
   animation: type 6s steps(60, end) infinite;
