--- a/drake-albums/v2/sass/_settings.scss
+++ b/drake-albums/v2/sass/_settings.scss
@@ -22,6 +22,7 @@ $link-blue: #268bd2;
 $clouds: #f8f8f8;
 $silver: #e1e1e1;
 
+
 //--------------------------------------------------------------------
 // Spacing
 //--------------------------------------------------------------------
@@ -31,6 +32,14 @@ $unit-small:	16px;
 $unit-med:		24px;
 $unit-large:	32px;
 $unit-xlarge:	40px;
+
+//--------------------------------------------------------------------
+// Padding
+//--------------------------------------------------------------------
+
+.padding-small { 
+  padding: $unit-small;
+}
 
 
 //--------------------------------------------------------------------
